fix dark mode on shop list page

--- a/website/src/styles.scss
+++ b/website/src/styles.scss
@@ -66,32 +66,25 @@ app-root > .light {
 }
 
 // Dark theme
-  app-root > .dark {
-    color: #ccc;
-    .container-outer {
-      background-color: rgba(0,0,0,0.25);
-    }
-    .container-inner {
-      background-color: rgba(0,0,0,0.8);
-    }
+app-root > .dark {
+  color: #ccc;
 
-    .container-inner {
-      .list-group-item {
-        border-color: #444;
-        background-color: rgba(0,0,0,0.8);
-        &.list-group-item-dark {
-          background-color: #444;
-          color: white;
-        }
-      }
-    }
-    .app-background {
-      filter: brightness(0.5) ! important;
-    }
-    .size-box-inner {
-      &.empty {
-        background-color: #222;
-        color: #888;
-      }
+  .container-outer {
+    background-color: rgba(0,0,0,0.25);
+  }
+
+  .container-inner {
+    background-color: rgba(0,0,0,0.8);
+  }
+
+  .app-background {
+    filter: brightness(0.5) ! important;
+  }
+
+  .size-box-inner {
+    &.empty {
+      background-color: #222;
+      color: #888;
     }
   }
+}
